--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 </head>
 <body>
    <img src="img/avatar-perfil.png" alt="avatar da fernanda" srcset="">
+   <p>Eu sou fernanda</p>
+   <h1>Eu ensino programação</h1>
+   <p> Engenharia de Computação e Pedagoga.
+    Ensaio pensamento computacional para estudantes 
+    do Ensino Fundamental e Médio.
+    Ensino sobre pensamento computacional usando 
+    HTML,CSS e JavaScript.
+    Veja os projetos que já desenvolvi!
+   </p>
 </body>
 </html>
