--- a/index.html
+++ b/index.html
@@ -18,5 +18,13 @@
     HTML,CSS e JavaScript.
     Veja os projetos que já desenvolvi!
    </p>
+   <p> Minhas habilidades</p>
+   <Div>
+        <p>HTML</P>
+        <p>CSS</P> 
+        <p>JavaScript</p>
+        <p>Scratch</p>
+       
+   </iv>
 </body>
 </html>
