--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Meu portifólio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-   <img src="img/avatar-perfil.png" alt="avatar da fernanda" srcset="">
-   <p>Eu sou fernanda</p>
+<body> 
+   <header class="container text-center"> 
+   <img src="img/avatar-perfil.png" class="rounded-circle" 
+   widht= "150" height="150" alt="avatar da fernanda" srcset="">
+   <p class="lead">Eu sou fernanda</p>
    <h1>Eu ensino programação</h1>
    <p> Engenharia de Computação e Pedagoga.
     Ensaio pensamento computacional para estudantes 
@@ -20,11 +22,11 @@
    </p>
    <p> Minhas habilidades</p>
    <Div>
-        <p>HTML</P>
-        <p>CSS</P> 
-        <p>JavaScript</p>
-        <p>Scratch</p>
-       
+        <p class="badge text-bg-secondary">HTML</P>
+        <p class="badge text-bg-secondary">CSS</P> 
+        <p class="badge text-bg-secondary">JavaScript</p>
+        <p class="badge text-bg-secondary">Scratch</p>  
    </iv>
+</header>
 </body>
 </html>
