--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
         <p class="badge text-bg-secondary">Scratch</p>  
    </iv>
 </header>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
