--- a/index.html
+++ b/index.html
@@ -27,8 +27,26 @@
         <p class="badge text-bg-secondary">CSS</P> 
         <p class="badge text-bg-secondary">JavaScript</p>
         <p class="badge text-bg-secondary">Scratch</p>  
-   </iv>
+   </div>
 </header>
+</main claas="container">
+    <h2>Meus Projetos</h2>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <img src="img/projeto-1-png" class="card-img-top " alt="imagem do projeto da biblioteca">
+                <div class="card-body">
+                    <h5 class="card-title">Minha biblioteca: uma webpage personalizada</h5>
+                    <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
+                      favoritos, incluindo informaçãoes sobre os autores, datas de publicação e linksara
+                       compra na Amazom. A página é estilizada com CSS para uma visualização agrádavel e 
+                       usa fontes externas do Google Fonts. </p>
+                     <button type="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+               </div>
+        </div>
+    </div>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
