--- a/index.html
+++ b/index.html
@@ -29,24 +29,62 @@
         <p class="badge text-bg-secondary">Scratch</p>  
    </div>
 </header>
-</main claas="container">
+</main claas="container mt-5">
     <h2>Meus Projetos</h2>
-    <div class="row">
+    <!--projeto 1-->
         <div class="col-md-4">
             <div class="card">
-                <img src="img/projeto-1-png" class="card-img-top " alt="imagem do projeto da biblioteca">
+                <img src="img/projeto-1-png" class="card-img-top" alt="imagem do projeto da biblioteca">SS
                 <div class="card-body">
                     <h5 class="card-title">Minha biblioteca: uma webpage personalizada</h5>
                     <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                      favoritos, incluindo informaçãoes sobre os autores, datas de publicação e linksara
+                      favoritos, incluindo informaçãoes sobre os autores, datas de publicação e links para
                        compra na Amazom. A página é estilizada com CSS para uma visualização agrádavel e 
-                       usa fontes externas do Google Fonts. </p>
-                     <button type="#" class="btn btn-primary">Go somewhere</a>
+                       usa fontes externas do Google Fonts.</p>
+                     <button type="button" class="btn btn-lignt">Veja o projeto</button>
+                   </div>
+                 </div>
+             </div>
+             <!--projeto 2-->
+             <div class="col-md-4">
+             <div class="card">
+                <img src="img/projeto-1-png" class="card-img-top" alt="imagem do projeto da biblioteca">
+                <div class="card-body">
+                    <h5 class="card-title">Decidindo o Fututo:Uma Jornada Interativa sobre 
+                      a Inteligencia Artificial</h5>
+                    <h5 class="card-title">Minha biblioteca: uma webpage personalizada</h5>
+                    <p class="card-text">Esse é um jogo interativo baseado em navegar
+                        que explora o impacto e as implicações da Inteligencia Artificial (IA) 
+                    .</p>
+                     <button type="button" class="btn btn-lignt">Veja o projeto</button>
+                  </div>
+                 </div>
+             </div>
+            <!--projeto 3-->
+            <div class="col-md-4">
+            <div class="card">
+                <img src="img/projeto-1-png" class="card-img-top" alt="Imagem do projeto da biblioteca">
+                <div class="card-body">
+                    <h5 class="card-title">Decidindo o Fututo:Uma Jornada Interativa sobre 
+                        a Inteligencia Artificial</h5>
+                    <h5 class="card-title">Minha biblioteca: uma webpage personalizada</h5>
+                    <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
+                      favoritos, incluindo informaçãoes sobre os autores, datas de publicação e links para
+                       compra na Amazom. A página é estilizada com CSS para uma visualização agrádavel e 
+                       usa fontes externas do Google Fonts.</p>
+                    <button type="button" class="btn btn-lignt">Veja o projeto</button>
                 </div>
-               </div>
+             </div>
         </div>
     </div>
 </main>
+<footer class="container py-5">
+<h2> entre em contato.</h2>
+<div>
+    <a href="https://github.com/sabrina313">Github</a>
+</div>
+<p class="my-5 text-center"> © Copyright 2024, produzido por Fernanda Maschetti</p>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
