--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                 <div class="card-body">
                     <h5 class="card-title">Decidindo o Fututo:Uma Jornada Interativa sobre 
                       a Inteligencia Artificial</h5>
-                    <h5 class="card-title">Minha biblioteca: uma webpage personalizada</h5>
-                    <p class="card-text">Esse é um jogo interativo baseado em navegar
-                        que explora o impacto e as implicações da Inteligencia Artificial (IA) 
+                    <h5 class="card-text">Este projeto é um jogo interativo baseado em navegador
+                        que explora o impacto e as implicação da InteligenciaArtificial (IA) na
+                        sociedade, permitindo que as pessoas jogadoras façam escolhas que influenciam
+                        o dessenrolar de uma narrativa sobre o futuroda IA.
                     .</p>
                      <button type="button" class="btn btn-lignt">Veja o projeto</button>
                   </div>
@@ -65,13 +66,13 @@
             <div class="card">
                 <img src="img/projeto-1-png" class="card-img-top" alt="Imagem do projeto da biblioteca">
                 <div class="card-body">
-                    <h5 class="card-title">Decidindo o Fututo:Uma Jornada Interativa sobre 
-                        a Inteligencia Artificial</h5>
-                    <h5 class="card-title">Minha biblioteca: uma webpage personalizada</h5>
-                    <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                      favoritos, incluindo informaçãoes sobre os autores, datas de publicação e links para
-                       compra na Amazom. A página é estilizada com CSS para uma visualização agrádavel e 
-                       usa fontes externas do Google Fonts.</p>
+                    <h5 class="card-title">explorando o Universo: Uma Aventura interativa em
+                         Astronomia com Scratch</h5>
+                    <p class="card-text">Este projeto Scratch cria uma experiencia interativa
+                        educativa ssobre astronomia, permitindo aos usuarios explorr informaçãoes sobre 
+                        constelaçãoes, eclipses, e a forma da Terraa traves de cenarios dinamicos
+                        e dialogos informativos.
+                    </p>
                     <button type="button" class="btn btn-lignt">Veja o projeto</button>
                 </div>
              </div>
