--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheets">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <title>Meu portifólio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
    <header class="container text-center"> 
-   <img src="img/avatar-perfil.png" class="rounded-circle" 
-   widht= "150" height="150" alt="avatar da fernanda" srcset="">
+   <img src="img/avatar-perfil.png" class="rounded-circle"
+   width= "150" heigth="150" alt="avatar da fernanda" srcset="">
    <p class="lead">Eu sou fernanda</p>
    <h1>Eu ensino programação</h1>
    <p> Engenharia de Computação e Pedagoga.
@@ -29,26 +30,27 @@
         <p class="badge text-bg-secondary">Scratch</p>  
    </div>
 </header>
-</main claas="container mt-5">
+</main class="container mt-5">
     <h2>Meus Projetos</h2>
+    <div class="row">
     <!--projeto 1-->
         <div class="col-md-4">
             <div class="card">
-                <img src="img/projeto-1-png" class="card-img-top" alt="imagem do projeto da biblioteca">SS
+                <img src="img/projeto-1.png" class="card-img-top" alt="imagem do projeto da biblioteca">
                 <div class="card-body">
                     <h5 class="card-title">Minha biblioteca: uma webpage personalizada</h5>
                     <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
                       favoritos, incluindo informaçãoes sobre os autores, datas de publicação e links para
                        compra na Amazom. A página é estilizada com CSS para uma visualização agrádavel e 
                        usa fontes externas do Google Fonts.</p>
-                     <button type="button" class="btn btn-lignt">Veja o projeto</button>
+                     <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
                    </div>
                  </div>
              </div>
              <!--projeto 2-->
              <div class="col-md-4">
              <div class="card">
-                <img src="img/projeto-1-png" class="card-img-top" alt="imagem do projeto da biblioteca">
+                <img src="img/projeto-2.png" class="card-img-top" alt="imagem do projeto da biblioteca">
                 <div class="card-body">
                     <h5 class="card-title">Decidindo o Fututo:Uma Jornada Interativa sobre 
                       a Inteligencia Artificial</h5>
@@ -57,14 +59,14 @@
                         sociedade, permitindo que as pessoas jogadoras façam escolhas que influenciam
                         o dessenrolar de uma narrativa sobre o futuroda IA.
                     .</p>
-                     <button type="button" class="btn btn-lignt">Veja o projeto</button>
+                     <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja o projeto</button>
                   </div>
                  </div>
              </div>
             <!--projeto 3-->
             <div class="col-md-4">
             <div class="card">
-                <img src="img/projeto-1-png" class="card-img-top" alt="Imagem do projeto da biblioteca">
+                <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto da biblioteca">
                 <div class="card-body">
                     <h5 class="card-title">explorando o Universo: Uma Aventura interativa em
                          Astronomia com Scratch</h5>
@@ -73,15 +75,129 @@
                         constelaçãoes, eclipses, e a forma da Terraa traves de cenarios dinamicos
                         e dialogos informativos.
                     </p>
-                    <button type="button" class="btn btn-lignt">Veja o projeto</button>
+                    <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja o projeto</button>
                 </div>
              </div>
         </div>
     </div>
 </main>
+
+<!--Modal Projeto 1-->
+<div class="modal" id="modal1" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Minha biblioteca: Uma Webpage personalizada</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <p>O projeto é uma página web criada com HTML e CSS, destinada a exibir uma coleção pessoal de
+                livros favoritos. O objetivo é criar um ambiente virtual onde seja possível compartilhar
+                seus livros preferidos, fornecendo uma descrição breve de cada um, incluindo o autor, o ano
+                de publicação e uma opção de compra.</p>
+            <p>A estrutura do site é baseada em HTML, que define a semântica e o layout do conteúdo,
+                enquanto o CSS é usado para estilizar a página visualmente, incluindo cores, tipografia e a
+                disposição dos elementos.</p>
+            <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
+                principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
+                flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
+                imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
+                uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
+                tela.</p>
+            <p>O CSS personaliza o visual do site, usando variáveis para cores, estilizando o texto com uma
+                fonte importada do Google Fonts e aplicando um esquema de cores suaves e botões interativos.
+                O uso de HTML e CSS é importante pois assim é possível criar um site acessível e
+                esteticamente agradável sem a necessidade de scripts complexos, com foco na usabilidade e na
+                experiência da pessoa usuária. A escolha da tipografia e do esquema de cores contribui para
+                a atmosfera acolhedora do site, incentivando a exploração da coleção de livros.</p>
+                <img src="img/projeto-1.png" class="img-fluid w-100"  alt="imagem representativa do projeto de uma biblioteca online">
+             </div>
+        <div class="modal-footer">
+         <a href="">Ver projeto ao vivo</a>
+         <a href="">Ver codigo do projwto</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!--Modal Projeto 2-->
+<div class="modal" id="modal2" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Minha biblioteca: Uma Webpage personalizada</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <p>O projeto é uma página web criada com HTML e CSS, destinada a exibir uma coleção pessoal de
+                livros favoritos. O objetivo é criar um ambiente virtual onde seja possível compartilhar
+                seus livros preferidos, fornecendo uma descrição breve de cada um, incluindo o autor, o ano
+                de publicação e uma opção de compra.</p>
+            <p>A estrutura do site é baseada em HTML, que define a semântica e o layout do conteúdo,
+                enquanto o CSS é usado para estilizar a página visualmente, incluindo cores, tipografia e a
+                disposição dos elementos.</p>
+            <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
+                principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
+                flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
+                imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
+                uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
+                tela.</p>
+            <p>O CSS personaliza o visual do site, usando variáveis para cores, estilizando o texto com uma
+                fonte importada do Google Fonts e aplicando um esquema de cores suaves e botões interativos.
+                O uso de HTML e CSS é importante pois assim é possível criar um site acessível e
+                esteticamente agradável sem a necessidade de scripts complexos, com foco na usabilidade e na
+                experiência da pessoa usuária. A escolha da tipografia e do esquema de cores contribui para
+                a atmosfera acolhedora do site, incentivando a exploração da coleção de livros.</p>
+                <img src="img/projeto-2.png" class="img-fluid w-100"  alt="imagem representativa do projeto de uma biblioteca online">
+             </div>
+        <div class="modal-footer">
+         <a href="">Ver projeto ao vivo</a>
+         <a href="">Ver codigo do projwto</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--Modal Projeto 3-->
+<div class="modal" id="modal3" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Minha biblioteca: Uma Webpage personalizada</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <p>O projeto é uma página web criada com HTML e CSS, destinada a exibir uma coleção pessoal de
+                livros favoritos. O objetivo é criar um ambiente virtual onde seja possível compartilhar
+                seus livros preferidos, fornecendo uma descrição breve de cada um, incluindo o autor, o ano
+                de publicação e uma opção de compra.</p>
+            <p>A estrutura do site é baseada em HTML, que define a semântica e o layout do conteúdo,
+                enquanto o CSS é usado para estilizar a página visualmente, incluindo cores, tipografia e a
+                disposição dos elementos.</p>
+            <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
+                principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
+                flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
+                imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
+                uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
+                tela.</p>
+            <p>O CSS personaliza o visual do site, usando variáveis para cores, estilizando o texto com uma
+                fonte importada do Google Fonts e aplicando um esquema de cores suaves e botões interativos.
+                O uso de HTML e CSS é importante pois assim é possível criar um site acessível e
+                esteticamente agradável sem a necessidade de scripts complexos, com foco na usabilidade e na
+                experiência da pessoa usuária. A escolha da tipografia e do esquema de cores contribui para
+                a atmosfera acolhedora do site, incentivando a exploração da coleção de livros.</p>
+                <img src="img/projeto-3.png" class="img-fluid w-100"  alt="imagem representativa do projeto de uma biblioteca online">
+             </div>
+        <div class="modal-footer">
+         <a href="">Ver projeto ao vivo</a>
+         <a href="">Ver codigo do projwto</a>
+        </div>
+      </div>
+    </div>
+  </div>
 <footer class="container py-5">
 <h2> entre em contato.</h2>
 <div>
+    <i class="bi bi-github"></i>
     <a href="https://github.com/sabrina313">Github</a>
 </div>
 <p class="my-5 text-center"> © Copyright 2024, produzido por Fernanda Maschetti</p>
